@@ -629,12 +629,9 @@ public class ParentQueue extends AbstractCSQueue {
         super.releaseResource(clusterResource, rmContainer.getContainer()
             .getResource(), node.getPartition());
 
-        LOG.info("completedContainer" +
-            " queue=" + getQueueName() + 
-            " usedCapacity=" + getUsedCapacity() +
-            " absoluteUsedCapacity=" + getAbsoluteUsedCapacity() +
-            " used=" + queueUsage.getUsed() + 
-            " cluster=" + clusterResource);
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("completedContainer " + this + ", cluster=" + clusterResource);
+        }
 
         // Note that this is using an iterator on the childQueues so this can't
         // be called if already within an iterator for the childQueues. Like
@@ -646,8 +643,9 @@ public class ParentQueue extends AbstractCSQueue {
             CSQueue csqueue = iter.next();
             if(csqueue.equals(completedChildQueue)) {
               iter.remove();
-              LOG.info("Re-sorting completed queue: " + csqueue.getQueuePath() +
-                  " stats: " + csqueue);
+              if (LOG.isDebugEnabled()) {
+                LOG.debug("Re-sorting completed queue: " + csqueue);
+              }
               childQueues.add(csqueue);
               break;
             }
